add oh my zsh config

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -41,5 +41,7 @@ size = 10.0
 [font.normal]
 family = "JetBrainsMonoNL NF"
 
-[shell]
-program = "/bin/fish"
+[terminal]
+
+[terminal.shell]
+program = "/bin/zsh"
