--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/retzs64/Downloads, file:///home/retzs64/Téléchargements, file:///mnt/movies/From Russia with Love (1963), file:///home/retzs64, file:///home/retzs64/movies/Live and Let Die (1973)
-lastVisited=file:///home/retzs64/Téléchargements
-qtVersion=6.7.2
+history=file:///mnt/movies/From Russia with Love (1963), file:///home/retzs64, file:///home/retzs64/movies/Live and Let Die (1973), file:///home/retzs64/Nextcloud, file:///home/retzs64/Nextcloud/KeyPass
+lastVisited=file:///home/retzs64/Nextcloud/KeyPass
+qtVersion=5.15.15
 shortcuts=file:///home/retzs64, file:///
 sidebarWidth=71
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff\0\0\0\0)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0l\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=List
