--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ font pango:monospace 8
 # start a terminal
 #bindsym $mod+Return exec alacritty
 #bindsym $mod+Return exec SHELL=/bin/fish uxterm
-bindsym $mod+Return exec alacritty -e fish
+bindsym $mod+Return exec alacritty
 #bindsym $mod+Return exec SHELL=/bin/fish gnome-terminal --hide-menubar
 #bindsym $mod+Return exec SHELL=/bin/fish termite
 
