Current config modified

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,7 +3,7 @@ Host git.lt-space.com
   PubkeyAcceptedKeyTypes +ssh-rsa
 
 Host *
-  User retzs64
+  User mixdata
   AddressFamily any
   ServerAliveInterval 240
   ServerAliveCountMax 2
