--- a/.config/i3/config
+++ b/.config/i3/config
@@ -308,17 +308,19 @@ bar {
 
 
 exec_always --no-startup-id light-locker --lock-after-screensaver=0 --lock-on-suspend --lock-on-lid --idle-hint # lightdm secure locker &
-exec_always --no-startup-id sleep 0.5; /usr/bin/sh ~/.screenlayout/setup.sh
+#exec_always --no-startup-id sleep 0.5; /usr/bin/sh ~/.screenlayout/setup.sh
 exec_always --no-startup-id xset r rate 200 80				# keyboard writing rate
 exec_always --no-startup-id xset dpms 0 0 300 &				# timeout for locker
 exec_always --no-startup-id xss-lock -- "playerctl pause; light-locker-command --lock" &	# lock after timeout
 
 exec --no-startup-id sh ~/.config/startup_command.sh
-exec --no-startup-id dunst						# desktop notifcation 
+exec --no-startup-id dunst -conf .config/dunst/dunstrc			# desktop notifcation 
 exec --no-startup-id ~/.config/i3blocks/script/battery/status.sh	# battery status check
 exec --no-startup-id nm-applet						# networkmanager
 exec --no-startup-id blueberry-tray
 exec --no-startup-id nextcloud
+exec --no-startup-id autorandr -c
+exec --no-startup-id feh --bg-scale /etc/lightdm/background.jpg
 
 #exec --no-startup-ip xcalb -co 130 -a 					# baisse la consomation de l'ecran
 #exec --no-startup-id redshift						# temperature
@@ -371,7 +373,7 @@ for_window [class="Microsoft Teams - Preview"] move container to workspace $ws8
 for_window [title="Incrustation vidéo"] sticky enable
 
 for_window [class="Spotify"] move container to workspace $ws10
-#exec --no-startup-id /usr/share/spotify/spotify
+exec --no-startup-id spotify
 
 #for_window [class="Gnome-terminal"] move container to workspace $ws3
 
