--- a/.ssh/config
+++ b/.ssh/config
@@ -3,7 +3,7 @@ Host git.lt-space.com
   PubkeyAcceptedKeyTypes +ssh-rsa
 
 Host *
-  User mixdata
+  User tlopez
   AddressFamily any
   ServerAliveInterval 240
   ServerAliveCountMax 2
